--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,7 +1,9 @@
 # Visit https://github.com/lowlighter/metrics/blob/master/action.yml for full reference
 name: Metrics
 on:
+  # Schedule updates (each hour)
   schedule: [{cron: "0 * * * *"}]
+  # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
   push: {branches: ["master", "main"]}
 jobs:
@@ -10,8 +12,36 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-            filename: metrics.plugin.isocalendar.fullyear.svg
-            token: ${{ secrets.METRICS_TOKEN }}
-            base: ""
-            plugin_isocalendar: yes
-            plugin_isocalendar_duration: full-year
+          token: ${{ secrets.METRICS_TOKEN }}
+
+          # Options
+          user: KaspianDev
+          template: classic
+          base: header, activity
+          config_timezone: Europe/Warsaw
+          plugin_achievements: yes
+          plugin_achievements_display: detailed
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: C
+          plugin_introduction: yes
+          plugin_introduction_title: yes
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: half-year
+          plugin_languages: yes
+          plugin_languages_analysis_timeout: 15
+          plugin_languages_categories: markup, programming
+          plugin_languages_colors: github
+          plugin_languages_limit: 8
+          plugin_languages_recent_categories: markup, programming
+          plugin_languages_recent_days: 14
+          plugin_languages_recent_load: 300
+          plugin_languages_sections: most-used
+          plugin_languages_threshold: 0%
+          plugin_music: yes
+          plugin_music_limit: 4
+          plugin_music_time_range: short
+          plugin_music_top_type: tracks
+          plugin_music_user: .user.login
+          plugin_stock: yes
+          plugin_stock_duration: 1d
+          plugin_stock_interval: 5m
