--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,6 +12,13 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
+          # Your GitHub token
+          # The following scopes are required:
+          #  - public_access (default scope)
+          # The following additional scopes may be required:
+          #  - read:org  (for organization related metrics)
+          #  - read:user (for user related data)
+          #  - repo      (optional, if you want to include private repositories)
           token: ${{ secrets.METRICS_TOKEN }}
 
           # Options
@@ -20,11 +27,9 @@ jobs:
           base: header, activity
           config_timezone: Europe/Warsaw
           plugin_achievements: yes
-          plugin_achievements_display: detailed
+          plugin_achievements_display: compact
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
-          plugin_introduction: yes
-          plugin_introduction_title: yes
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           plugin_languages: yes
@@ -39,9 +44,14 @@ jobs:
           plugin_languages_threshold: 0%
           plugin_music: yes
           plugin_music_limit: 4
+          plugin_music_mode: playlist
+          plugin_music_played_at: yes
+          plugin_music_playlist: https://open.spotify.com/playlist/5gD2q5700mwOoTIucA1heQ
+          plugin_music_provider: spotify
           plugin_music_time_range: short
           plugin_music_top_type: tracks
-          plugin_music_user: .user.login
+          plugin_music_user: 313mb2ewmpq7wrcwryyzvba6ieim
           plugin_stock: yes
-          plugin_stock_duration: 1d
+          plugin_stock_duration: 1mo
           plugin_stock_interval: 5m
+          plugin_stock_symbol: MOEX
