--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -42,16 +42,7 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
-          plugin_music: yes
-          plugin_music_limit: 4
-          plugin_music_mode: playlist
-          plugin_music_played_at: yes
-          plugin_music_playlist: https://open.spotify.com/playlist/5gD2q5700mwOoTIucA1heQ?si=87146b85aaf74a64
-          plugin_music_provider: spotify
-          plugin_music_time_range: short
-          plugin_music_top_type: tracks
-          plugin_music_user: 313mb2ewmpq7wrcwryyzvba6ieim
           plugin_stock: yes
           plugin_stock_duration: 1mo
           plugin_stock_interval: 5m
-          plugin_stock_symbol: MCX
+          plugin_stock_symbol: RUB=X
